--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Prnom" required>
+                        <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Prenom" required>
                         <label for="prenom">Prénom</label>
                     </div>
                     
